avoid line breaks nodePathPanel, instead overflow left #607

--- a/visualization/app/codeCharta/ui/nodePathPanel/nodePathPanel.component.scss
+++ b/visualization/app/codeCharta/ui/nodePathPanel/nodePathPanel.component.scss
@@ -4,6 +4,9 @@ node-path-panel-component {
 		float: left;
 		font-size: 10pt;
 		max-width: calc(100% - 250px);
+		direction: rtl;
+		overflow: hidden;
+		white-space: nowrap;
 	}
 
 	.hovered-node-name {
