--- a/visualization/app/codeCharta/ui/toolBar/toolBar.component.scss
+++ b/visualization/app/codeCharta/ui/toolBar/toolBar.component.scss
@@ -1,10 +1,7 @@
 tool-bar-component {
 	.tool-bar {
 		background-color: #f0f0f0;
-		overflow: hidden;
-		margin-block-end: 0;
-		padding-bottom: 0;
-		margin-bottom: 0;
+		height: 35px;
 		font-size: 0px;
 		border-bottom: 1px solid #cdcdcd;
 	}
